{console.log('TIMEOUT')
[eval]:1
const http=require('http');const req=http.get('http://127.0.0.1:3000/',r= d='';r.on('data',c==c);r.on('end',()=,r.statusCode,d.substring(0,200));process.exit(0)})});req.on('error',e=,e.message);process.exit(1)});setTimeout(()=;process.exit(1)},5000)
                                                                            ^^

SyntaxError: missing ) after argument list
    at makeContextifyScript (node:internal/vm:185:14)
    at node:internal/process/execution:107:22
    at [eval]-wrapper:6:24
    at runScript (node:internal/process/execution:101:62)
    at evalScript (node:internal/process/execution:133:3)
    at node:internal/main/eval_string:51:3

Node.js v20.20.2
